--- a/Omniglot Using Metric learning.ipynb
+++ b/Omniglot Using Metric learning.ipynb
@@ -719,6 +719,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Training\n",
+    "\n",
+    "Training will go for 30,000 iterations. After every 200 iterations the model is tested on the test set using 20 way one shot tasks as mentioned in the challenge description. 200 iterations was used because it seems a good interval to test the data on. Batch_size of 32 was used as it seems good enough while not letting the training take too long. The number of one shot tasks is 250 which seems a good number for testing the model on. Also, the best accuracy and the corresponding model with its parameters are recorded every 200 interations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Training hyperparameters"
    ]
   },
